--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,14 @@
 name: ci-hello
-on: push
+# on: push
+on:
+  push:
+    branches-ignore:
+      - workshop-test
 
 jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
       - name: ci-workflow-test
-        run: echo "Hello World!"
+        run: echo This workflow should not run on the `master` branch
+        # run: echo "Hello World!"
