--- a/k8s-deployment.yml
+++ b/k8s-deployment.yml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: nodejs-todo
-        image: jestfer/nodejs-todo
+        image: jestfer/nodejs-todo:k8s
         ports:
         - containerPort: 8080
         resources:
